# coqui-tts-main

./: .pre-commit-config.yaml  AUDIT_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  MODERNIZATION_ROADMAP.md  MODERNIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  VOICECRAFT_X_IMPROVEMENTS.md  VOICECRAFT_X_README.md  pyproject.toml  requirements.dev.txt  requirements.txt  test_voicecraft_x.py
TTS/: api.py
TTS/server/: server.py
TTS/tts/: claude.md
TTS/tts/layers/xtts/: align_utils.py  delay_pattern.py  encodec_tokenizer.py  qwen3_backbone.py  speaker_embedding.py  text_processor.py  token_reordering.py  voicecraft_x_loss.py
TTS/tts/models/: voicecraft_x.py
TTS/utils/: torch_compile.py
docs/: DOCUMENTATION_INDEX.md  GETTING_STARTED.md  GOVERNANCE.md  README.md  VOICECRAFT_X_COMPARISON_REPORT.md
docs/architecture/: ARCHITECTURAL_OVERVIEW.md
docs/development/: TTS_PACKAGE_GUIDE.md  claude.md
docs/models/: voicecraft_x.md
docs/source/: index.md
examples/: torch_compile_example.py  voicecraft_x_example.py
