[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "cython~=0.29.30",
    "numpy>=1.22.0",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
name = "TTS"
dynamic = ["version"]
description = "Deep learning for Text to Speech by Coqui"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.9,<3.12"
authors = [
    {name = "Eren Gölge", email = "egolge@coqui.ai"},
]
keywords = ["text-to-speech", "tts", "speech-synthesis", "deep-learning", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/coqui-ai/TTS"
Documentation = "https://tts.readthedocs.io/"
Repository = "https://github.com/coqui-ai/TTS"
Issues = "https://github.com/coqui-ai/TTS/issues"
Discussions = "https://github.com/coqui-ai/TTS/discussions"

[tool.setuptools]
packages = ["TTS"]

[tool.setuptools.dynamic]
version = {file = "TTS/VERSION"}

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start with false, gradually enable
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
follow_imports = "normal"
exclude = [
    "build/",
    "dist/",
    ".eggs/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "librosa.*",
    "soundfile.*",
    "numba.*",
    "coqpit.*",
    "trainer.*",
    "gruut.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=TTS",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "inference: marks tests that require model inference",
    "training: marks tests that involve model training",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["TTS"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# Note: flake8 configuration is in setup.cfg as flake8 doesn't support pyproject.toml natively
# We primarily use ruff for linting, which is configured above
